--- a/src/styles/_default.scss
+++ b/src/styles/_default.scss
@@ -94,4 +94,43 @@ body {
 .decorate {
   color: $color-white;
 }
-  
+
+.image {
+  width: 100%;
+
+  &__card {
+    position: absolute;
+    right: 0;
+    top: 5rem;
+
+    width: fit-content;
+    height: 80%;
+  }
+}
+
+.lists {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  flex-direction: column;
+
+  padding: $p-2;
+}
+
+.checkout {
+  position: absolute;
+  top: -16rem;
+  right: 2rem;
+
+  z-index: 2;
+
+}
+
+.shape {
+  position: absolute;
+  left: 10rem;
+  top: -2rem;
+
+  z-index: 1;
+}
