--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -115,6 +115,63 @@ body {
   text-decoration: none;
 }
 
+.modal {
+  -webkit-backdrop-filter: blur(8px);
+          backdrop-filter: blur(8px);
+}
+.modal-header {
+  background: #20da7d;
+  color: #ffffff;
+  border-bottom: none;
+}
+.modal-body {
+  background: linear-gradient(140.32deg, #4b4949 -277.16%, #141218 66.28%);
+}
+
+.close {
+  opacity: 1;
+  text-shadow: none;
+}
+
+.decorate {
+  color: #ffffff;
+}
+
+.image {
+  width: 100%;
+}
+.image__card {
+  position: absolute;
+  right: 0;
+  top: 5rem;
+  width: -moz-fit-content;
+  width: fit-content;
+  height: 80%;
+}
+
+.lists {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  flex-direction: column;
+  padding: 2rem;
+}
+
+.checkout {
+  position: absolute;
+  top: -16rem;
+  right: 2rem;
+  z-index: 2;
+}
+
+.shape {
+  position: absolute;
+  left: 10rem;
+  top: -2rem;
+  z-index: 1;
+}
+
 .btns {
   transition: all 0.3s;
   display: inline-block;
@@ -195,6 +252,43 @@ body {
   left: 5rem;
 }
 
+.cards {
+  transition: all 0.3s;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  justify-content: flex-start;
+  position: relative;
+  margin: 1rem;
+  padding: 2rem;
+  text-align: center;
+  background: linear-gradient(140.32deg, #4b4949 -277.16%, #141218 66.28%);
+  border-radius: 1rem;
+  cursor: pointer;
+}
+.cards:hover {
+  transform: translateY(-3px);
+}
+
+.block {
+  transition: all 0.3s;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+  background: transparent;
+  text-align: center;
+  border-radius: 1rem;
+  cursor: pointer;
+}
+.block-text {
+  padding-left: 2rem;
+}
+.block:hover {
+  transform: translateY(-3px);
+  background: linear-gradient(140.32deg, #4b4949 -277.16%, #141218 66.28%);
+}
+
 .header {
   display: flex;
   justify-content: space-between;
@@ -244,6 +338,15 @@ body {
 .section__image {
   display: flex;
   justify-content: center;
+}
+.section-1, .section-2 {
+  margin-top: 10rem;
+}
+.section-4 .cards {
+  position: absolute;
+  top: 18rem;
+  right: 7rem;
+  z-index: 2;
 }
 
 .line {
