--- a/src/styles/_sections.scss
+++ b/src/styles/_sections.scss
@@ -45,6 +45,16 @@
           z-index: 2;
         }
     }
+
+    &-6 {
+        .title-description {
+            position: absolute;
+            left:  45rem;
+            width: 100vw;
+
+            transform: rotate(-90deg);
+        }
+    }
 }
   
 
