--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -79,7 +79,7 @@ body {
   text-align: center;
   letter-spacing: 0.2rem;
   line-height: 55px;
-  color: #20da7d;
+  color: rgba(231, 227, 255, 0.7960784314);
   cursor: pointer;
 }
 .title-section {
@@ -172,6 +172,31 @@ body {
   z-index: 1;
 }
 
+.around {
+  height: 45rem;
+  border: 5px solid #20da7d;
+  border-radius: 50%;
+}
+.around .title {
+  transform: rotateZ(25deg);
+}
+.around-2, .around-3, .around-4, .around-5 {
+  border: 5px solid #20da7d;
+  border-radius: 50%;
+}
+.around-2 {
+  height: 35rem;
+}
+.around-3 {
+  height: 25rem;
+}
+.around-4 {
+  height: 15rem;
+}
+.around-5 {
+  height: 5rem;
+}
+
 .btns {
   transition: all 0.3s;
   display: inline-block;
@@ -207,6 +232,22 @@ body {
 }
 .btns__up_hide {
   display: none;
+}
+
+.swiper {
+  width: 100%;
+  height: auto;
+}
+.swiper-slide {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.swiper-scrollbar {
+  bottom: 0;
+}
+.swiper-scrollbar-drag {
+  background-color: #20da7d;
 }
 
 .navbar {
@@ -347,6 +388,12 @@ body {
   top: 18rem;
   right: 7rem;
   z-index: 2;
+}
+.section-6 .title-description {
+  position: absolute;
+  left: 45rem;
+  width: 100vw;
+  transform: rotate(-90deg);
 }
 
 .line {
